--- a/css/about.html
+++ b/css/about.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>About Page.</h1>
-    <a href="https://help.pinterest.com/en/contact"></a>
+    
+
+      <hi>ABOUT Page</hi>
+
+      <h3><a href=""</h3>
 </body>
 </html>
