--- a/log.html
+++ b/log.html
@@ -14,11 +14,17 @@
 		<source src="shape.mp3" type="audio/mp3"/>
 	</audio>
 	
+<header>
+	<nav>
+		<li><a href="https://student.learn.gomycode.co/course/49a52360-6d77-4a22-93ba-c0df75939e9c/node/3bf3b5cc-dc65-48bd-9f7e-51872f6a2462/kind/1">Home</a></li>
+		<li><a href="about.html">About</a></li>
+		<li><a href="work"></a>work</li>
+		<li><a href="resume"></a>resume</li>
+		<li><a href="https://help.pinterest.com/en/contact"></a> contact</li>
+	</nav>
+	
+</header>
 
-<h2>Local Link</h2>
-
-<a href="https://web.facebook.com/">facebook </a> <br>
-<a href="about.html">About</a>
 
 
 <h3>html form</h3>
