updated omething on it

--- a/log.html
+++ b/log.html
@@ -21,7 +21,7 @@
 		<li><a href="work"></a>work</li>
 		<li><a href="resume"></a>resume</li>
 		<li><a href="https://help.pinterest.com/en/contact"></a> contact</li>
-	</nav>
+	</navs>
 	
 </header>
 
