--- a/css/about.html
+++ b/css/about.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <p>
+        about Page
+    </p>
 
       <hi>ABOUT Page</hi>
+      <a href="index.html">index.html</a>
 
-      <h3><a href=""</h3>
+      
 </body>
 </html>
