--- a/css/index.html
+++ b/css/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <a href="about.html">about.html</a>
+    <p>
+        home Page
+    </p>
 </body>
 </html>
