change it to cap

--- a/css/project.html
+++ b/css/project.html
@@ -10,7 +10,7 @@
   
     
     <h1>Assignment</h1>
-	<p>My name is olanrewaju zainab</p>
+	<p>MY NAME IS OLANREWAJU ZAINAB</p>
 
 	<h2>Audio</h2>
 	<audio controls>
