--- a/css/project.html
+++ b/css/project.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>inline || css</title>
      <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+
+<body style="background-color: aqua;">
+	<h1 style="background-color: black;color: azure;">inline css</h1>
   
     
-    <h1>Assignment</h1>
+    <h2>Project </h2>
+	
 	<p>MY NAME IS OLANREWAJU ZAINAB</p>
 
-	<h2>Audio</h2>
+	<h3>Audio</h3>
 	<audio controls>
 		<source src="shape.mp3" type="audio/mp3"/>
 	</audio>
