--- a/css/project.html
+++ b/css/project.html
@@ -10,6 +10,7 @@
 
 <body style="background-color: aqua;">
 	<h1 style="background-color: black;color: azure;">inline css</h1>
+	<h2 style="font-size:large;"> inline css</h2>
   
     
     <h2>Project </h2>
