--- a/css/project.html
+++ b/css/project.html
@@ -6,18 +6,14 @@
     <title>inline || css</title>
      <link rel="stylesheet" href="style.css">
 </head>
-
-
-<body style="background-color: aqua;">
-	<h1 style="background-color: black;color: azure;">inline css</h1>
-	<h2 style="font-size:large;"> inline css</h2>
+<body>
   
     
-    <h2>Project </h2>
+    <h1>Project </h1>
 	
 	<p>MY NAME IS OLANREWAJU ZAINAB</p>
 
-	<h3>Audio</h3>
+	<h2>Audio</h2>
 	<audio controls>
 		<source src="shape.mp3" type="audio/mp3"/>
 	</audio>
