--- a/css/project.html
+++ b/css/project.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inline || css</title>
-     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body style="background-color: blue;">
+	<h1 style="background-color: azure; color: gold;"> Inline css</h1>
   
     
     <h1>Project </h1>
