--- a/css/project.html
+++ b/css/project.html
@@ -23,9 +23,9 @@
 	<nav>
 		<li><a href="https://student.learn.gomycode.co/course/49a52360-6d77-4a22-93ba-c0df75939e9c/node/3bf3b5cc-dc65-48bd-9f7e-51872f6a2462/kind/1">Home</a></li>
 		<li><a href="about.html">About</a></li>
-		<li><a href="work"></a>work</li>
-		<li><a href="resume"></a>resume</li>
-		<li><a href="https://help.pinterest.com/en/contact"></a> contact</li>
+		<li><a href="work">work</a></li>
+		<li><a href="resume">resume</a></li>
+		<li><a href="https://help.pinterest.com/en/contact">contact</a></li>
 	</navs>
 	
 </header>
@@ -34,8 +34,8 @@
 
 <h3>html form</h3>
  <!-- HTML forms -->
-<form></form>
-<label for="firstname"> Firstname</label>
+<form>
+	<label for="firstname"> Firstname</label>
 <input type="text" name="firstname" id="firstname" required> <br>
 <label for="middlename"> middlename</label>
 <input type="text" name="middlename" id="middlename" required> <br>
@@ -45,6 +45,9 @@
 <input type="text" name="address" id="address" required> <br>
 <label for="number"> number</label>
 <input type="number" name="number" id="number" required> <br>
+
+</form>
+
 
 	
 
