--- a/css/table.html
+++ b/css/table.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <table border="1" style="border-collapse:  ;">
+    <table border="1" style="border-collapse:collapse  ;">
         <tr>
             <th>FirstName</th>
             <th>LastName</th>
