--- a/css/table.html
+++ b/css/table.html
@@ -8,7 +8,52 @@
 </head>
 
 <body>
-    <table border="1" style="border-collapse:collapse  ;">
+
+
+
+    <!-- ** BEST WAY TO WRITE HTML TABLE -->
+    <table>
+        <thead>
+            <tr>
+                <th>FirstName</th>
+                <th>LastName</th>
+                <th>Age</th>
+                <th>class</th>
+            </tr>
+            <tr>
+                <td>Noah</td>
+                <td>Osasdebameh</td>
+                <td>12</td>
+                <td>Jss2</td>
+            </tr>
+
+            <tr>
+                <td>Samuel</td>
+                <td>Iyobosa</td>
+                <td>9</td>
+                <td>Pri6</td>
+            </tr>
+
+            <tr>
+                <td>Rejoice</td>
+                <td>Osasumeh</td>
+                <td>6</td>
+                <td>Pri2</td>
+            </tr>
+        </thead>
+
+    </table>
+
+
+
+
+
+
+
+
+
+    <!-- ** Normal way of writing HTML TABLE -->
+    <!-- <table border="1" style="border-collapse:collapse  ;">
         <tr>
             <th>FirstName</th>
             <th>LastName</th>
@@ -28,7 +73,10 @@
         </tr>
 
 
-    </table>
+    </table> -->
+
+
+
 </body>
 
 </html>
