--- a/css/table.html
+++ b/css/table.html
@@ -5,13 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th,
+        td {
+            border: 2px solid red;
+        }
+
+        td {
+            background-color: black;
+            color: white;
+        }
+    </style>
+
+
 </head>
 
 <body>
-
-
-
-    <!-- ** BEST WAY TO WRITE HTML TABLE -->
+    <!-- ** BEST WAY TO WRITE HTM/L TABLE -->
     <table>
         <thead>
             <tr>
