--- a/css/project.html
+++ b/css/project.html
@@ -1,55 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inline || css</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>inline || css</title>
 </head>
 
 <body style="background-color: blue;">
 	<h1 style="background-color: azure; color: gold;"> Inline css</h1>
-  
-    
-    <h1>Project </h1>
-	
+
+
+	<h1>Project </h1>
+
 	<p>MY NAME IS OLANREWAJU ZAINAB</p>
 
 	<h2>Audio</h2>
 	<audio controls>
-		<source src="shape.mp3" type="audio/mp3"/>
+		<source src="shape.mp3" type="audio/mp3" />
 	</audio>
-	
-<header>
-	<nav>
-		<li><a href="https://student.learn.gomycode.co/course/49a52360-6d77-4a22-93ba-c0df75939e9c/node/3bf3b5cc-dc65-48bd-9f7e-51872f6a2462/kind/1">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="work">work</a></li>
-		<li><a href="resume">resume</a></li>
-		<li><a href="https://help.pinterest.com/en/contact">contact</a></li>
-	</navs>
-	
-</header>
+
+	<header>
+		<nav>
+			<li><a
+					href="https://student.learn.gomycode.co/course/49a52360-6d77-4a22-93ba-c0df75939e9c/node/3bf3b5cc-dc65-48bd-9f7e-51872f6a2462/kind/1">Home</a>
+			</li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="work">work</a></li>
+			<li><a href="resume">resume</a></li>
+			<li><a href="https://help.pinterest.com/en/contact">contact</a></li>
+			</navs>
+
+	</header>
 
 
 
-<h3>html form</h3>
- <!-- HTML forms -->
-<form>
-	<label for="firstname"> Firstname</label>
-<input type="text" name="firstname" id="firstname" required> <br>
-<label for="middlename"> middlename</label>
-<input type="text" name="middlename" id="middlename" required> <br>
-<label for="lastname"> lastname</label>
-<input type="text" name="lastname" id="lastname" required> <br>
-<label for="address"> address</label>
-<input type="text" name="address" id="address" required> <br>
-<label for="number"> number</label>
-<input type="number" name="number" id="number" required> <br>
+	<h3>html form</h3>
+	<!-- HTML forms -->
+	<form>
+		<label for="firstname"> Firstname</label>
+		<input type="text" name="firstname" id="firstname" required> <br>
+		<label for="middlename"> middlename</label>
+		<input type="text" name="middlename" id="middlename" required> <br>
+		<label for="lastname"> lastname</label>
+		<input type="text" name="lastname" id="lastname" required> <br>
+		<label for="address"> address</label>
+		<input type="text" name="address" id="address" required> <br>
+		<label for="number"> number</label>
+		<input type="number" name="number" id="number" required> <br>
 
-</form>
+	</form>
 
 
-	
+
 
 </body>
+
 </html>
