--- a/css/project.html
+++ b/css/project.html
@@ -7,7 +7,7 @@
 	<title>inline || css</title>
 </head>
 
-<body style="background-color: blue;">
+<body style="background-color: orange;">
 	<h1 style="background-color: azure; color: gold;"> Inline css</h1>
 
 
