--- a/position.html
+++ b/position.html
@@ -15,13 +15,42 @@
         position: absolute;
         top: 8px;
         left: 16px;
-        font-size: 18px;
+        font-size: 40px;
+        color: white;
     }
+
+    .topright {
+        position: absolute;
+        top: 8px;
+        right: 16px;
+        font-size: 40px;
+        color: white;
+    }
+
+
+
+    .bottomleft {
+        position: absolute;
+        bottom: 50px;
+        left: 16px;
+        font-size: 40px;
+        color: white;
+    }
+
+
+    .bottomright {
+        position: absolute;
+        bottom: 50px;
+        left: 1600px;
+        font-size: 40px;
+        color: white;
+    }
+
 
     img {
         width: 100%;
         height: auto;
-        opacity: 0.3;
+        /* opacity: 0.3; */
     }
 </style>
 
