--- a/css/food.html
+++ b/css/food.html
@@ -109,7 +109,7 @@
             <p>Follow us on social media:</p>
             <p>
                 <a href="https://instagram.com/yourprofile">Instagram</a> |
-                <a href="https://facebook.com/yourprofile">Facebook</a>
+                <a href="https://web.facebook.com/?_rdc=2&_rdr">Facebook</a>
             </p>
         </section>
     </div>
