--- a/css/pro.html
+++ b/css/pro.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8;
+            background-color: red;
         }
 
         header {
@@ -73,9 +73,9 @@
     <header>
         <h1>Fashion Design Portfolio</h1>
         <nav>
-            <a href="#about">About</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a href="about">About</a>
+            <a href="portfolio">Portfolio</a>
+            <a href="contact">Contact</a>
         </nav>
     </header>
 
@@ -90,7 +90,7 @@
             <h2>My Work</h2>
             <div class="portfolio">
                 <div class="item">
-                    <img src="https://via.placeholder.com/250" alt="Design 1">
+                    <img src="Goo" alt="Design 1">
                     <h3>Collection 1</h3>
                     <p>A stylish blend of comfort and elegance.</p>
                 </div>
@@ -115,7 +115,7 @@
         <section id="contact">
             <h2>Contact Me</h2>
             <p>If you're interested in collaborating or have any questions, feel free to reach out!</p>
-            <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+            <p>Email: <a href="abiodunzainab21@gmail.com">gmail.com</a></p>
             <p>Follow me on social media:</p>
             <p>
                 <a href="https://instagram.com/yourprofile">Instagram</a> |
