--- a/css/pro.html
+++ b/css/pro.html
@@ -90,17 +90,18 @@
             <h2>My Work</h2>
             <div class="portfolio">
                 <div class="item">
-                    <img src="Goo" alt="Design 1">
+                    <img src="hq720.jpg.com/250" alt="Design 1">
                     <h3>Collection 1</h3>
                     <p>A stylish blend of comfort and elegance.</p>
                 </div>
                 <div class="item">
-                    <img src="https://via.placeholder.com/250" alt="Design 2">
+                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.jumia.com.ng%2Fmlp-african-dress%2F&psig=AOvVaw1p4fzCS-pCFgXILyTm_yNX&ust=1727199675428000&source=images&cd=vfe&opi=89978449&ved=2ahUKEwjOlJOqztmIAxVMZUEAHbQmAxoQjRx6BAgAEBg250"
+                        alt="Design 2">
                     <h3>Collection 2</h3>
                     <p>Bold colors and innovative designs.</p>
                 </div>
                 <div class="item">
-                    <img src="https://via.placeholder.com/250" alt="Design 3">
+                    <img src="cl" alt="Design 3">
                     <h3>Collection 3</h3>
                     <p>Chic styles for the modern woman.</p>
                 </div>
