--- a/css/pro.html
+++ b/css/pro.html
@@ -90,7 +90,7 @@
             <h2>My Work</h2>
             <div class="portfolio">
                 <div class="item">
-                    <img src="1" alt="Design 1">
+                    <img src="1.jpg" alt="Design 1">
                     <h3>Collection 1</h3>
                     <p>A stylish blend of comfort and elegance.</p>
                 </div>
