--- a/css/pro.html
+++ b/css/pro.html
@@ -71,7 +71,7 @@
 <body>
 
     <header>
-        <h1>Fashion Design Portfolio</h1>
+        <h1>Unique Styles For All</h1>
         <nav>
             <a href="about">About</a>
             <a href="portfolio">Portfolio</a>
@@ -95,22 +95,37 @@
                     <p>A stylish blend of comfort and elegance.</p>
                 </div>
                 <div class="item">
-                    <img src="my love.jpg" alt="Design 2">
+                    <img src="bubu.jpg" alt="Design 2">
                     <h3>Collection 2</h3>
                     <p>Bold colors and innovative designs.</p>
                 </div>
                 <div class="item">
-                    <img src="cloth.jpeg/250" alt="Design 3">
+                    <img src="adire.jpg" alt="Design 3">
                     <h3>Collection 3</h3>
                     <p>Chic styles for the modern woman.</p>
                 </div>
                 <div class="item">
-                    <img src="https://via.placeholder.com/250" alt="Design 4">
+                    <img src="trend.jpeg" alt="Design 4">
                     <h3>Collection 4</h3>
                     <p>Timeless pieces for every occasion.</p>
                 </div>
             </div>
         </section>
+
+
+        <table>
+            <form>
+
+                <label for="firstname"> Firstname</label>
+                <input type="text" name="firstname" id="firstname" required>
+                <label for="lastname"> lastname</label>
+                <input type="text" name="lastname" id="lastname" required>
+                <label for="address"> address</label>
+                <input type="text" name="address" id="address" required>
+                <label for="number"> number</label>
+                <input type="number" name="number" id="number" required>
+            </form>
+        </table>
 
         <section id="contact">
             <h2>Contact Me</h2>
@@ -123,6 +138,7 @@
             </p>
         </section>
     </div>
+
 
     <footer>
         <p>&copy; 2024 Fashion Design Portfolio. All Rights Reserved.</p>
